Table users {
  id bigint [pk]
  name varchar
  email varchar
  email_verified_at datetime
  password varchar
  remember_token varchar
  created_at timestamp
  updated_at timestamp
}

Table products {
  id bigint [pk]
  name varchar(100) [not null]
  description text
  price int [not null, note: "unsigned"]
  stock int [not null, note: "unsigned"]
  is_publish boolean [default: false]
  published_at datetime
  available_from datetime
  available_until datetime
  created_at timestamp
  updated_at timestamp
}

Table categories {
  id bigint [pk]
  name varchar(100) [not null]
  created_at timestamp
  updated_at timestamp
}

Table category_product {
  category_id bigint [ref: > categories.id]
  product_id bigint [ref: > products.id]
}

Table carts {
  id bigint [pk]
  user_id bigint [ref: > users.id]
  product_id bigint [ref: > products.id]
}

Table cart_items {
  id bigint [pk]
  product_id bigint [ref: > products.id]
  cart_id bigint [ref: > carts.id]
  quantity int [not null, note: "unsigned"]
  price int [not null, note: "unsigned"]
  created_at timestamp
  updated_at timestamp
}

Table addresses {
  id int [pk, increment]
  user_id bigint [not null, ref: > users.id]
  recipient_name varchar(50) [not null]
  postal_code varchar(16) [not null]
  prefecture varchar(50) [not null]
  city varchar(100) [not null]
  street varchar(150) [not null]
  building varchar(150)
  phone_number varchar(11) [not null]
  is_default bool [default: true]
  created_at timestamp
  updated_at timestamp
}

Table orders {
  id int [pk, increment]
  user_id bigint [not null, ref: > users.id]
  total_amount int [not null, note: "unsigned"]
  shipping_address_id bigint [not null, ref: > addresses.id]
  created_at timestamp
  updated_at timestamp
}

Table order_items {
  id int [pk, increment]
  order_id bigint [not null, ref: > orders.id]
  product_id bigint [not null, ref: > products.id]
  quantity int [not null, note: "unsigned"]
  price int [not null, note: "unsigned"]
  created_at timestamp
  updated_at timestamp
}